--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
                 <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
+        <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/paper-1074131_1280.jpg" alt="#">
     </header>
     <main>
         <section class="about-me">
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                Excepturi esse porro quis molestiae qui unde.
                Optio quae quidem, sequi veritatis at nemo eaque nobis architecto eveniet soluta iusto eum voluptatum.
