--- a/index.html
+++ b/index.html
@@ -11,34 +11,42 @@
         <h1>Ayden Krohn</h1>
         <nav>
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
             </ul>
         </nav>
         <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Mountain-Background.jpg" alt="#">
     </header>
     <main>
-        <section class="about-me">
+        <section id="about-me">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                Excepturi esse porro quis molestiae qui unde.
                Optio quae quidem, sequi veritatis at nemo eaque nobis architecto eveniet soluta iusto eum voluptatum.
             </p>
         </section>
-        <section class="work">
+        <section id="work">
             <h2>Work</h2>
             <section id="work-preview">
-
+                <a href=/Users/aydenkrohn/Bootcamp/Module-1-Challenge/index.html><img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Module-1-Screenshot.png" title="Click to visit website!" height="400" width="650"></a>
+                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!" height="400" width="650">
+                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!" height="400" width="650">
+                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!" height="400" width="650">
             </section>
         </section>
-        <section class="contact-me">
+        <section id="contact-me">
             <h2>Contact Me</h2>
-            <a href="#">Phone Number</a>
-            <a href="#">Email</a>
-            <a href="#">GitHub</a>
-            <a href="#">Linkedin</a>
+            <ul>
+                <li><a href="tel:7859557333">Phone Number</a></li>
+                <li><a href="mailto:krohnayden@gmail.com">Email</a></li>
+                <li><a href="https://github.com/krohnayden">GitHub</a></li>
+                <li><a href="www.linkedin.com/in/krohnayden">Linkedin</a></li>
+            </ul>
         </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
