finilized HTML, added  most CSS styling, and started readme

--- a/index.html
+++ b/index.html
@@ -21,18 +21,24 @@
     <main>
         <section id="about-me">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-               Excepturi esse porro quis molestiae qui unde.
-               Optio quae quidem, sequi veritatis at nemo eaque nobis architecto eveniet soluta iusto eum voluptatum.
+            <p> I currently live in Topeka, Kansas and work at a grocery store.
+                After this bootcamp, I hope to leave my job as a grocery store clerk and 
+                apply my knowledge of coding to start my carrer in full-stack development.
+                This website contains my projects showcasing my skills in HTML, CSS, and JavaScript.
             </p>
+            <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/selflie-website.jpg" alt="picture of myself" height="150px" width="150px">
         </section>
         <section id="work">
             <h2>Work</h2>
             <section id="work-preview">
-                <a href=/Users/aydenkrohn/Bootcamp/Module-1-Challenge/index.html><img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Module-1-Screenshot.png" title="Click to visit website!" height="400" width="650"></a>
-                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!" height="400" width="650">
-                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!" height="400" width="650">
-                <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!" height="400" width="650">
+                <div id="main-project">
+                    <a href=/Users/aydenkrohn/Bootcamp/Module-1-Challenge/index.html><img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Module-1-Screenshot.png" title="Click to visit website!" height="400" width="70%"></a>
+                </div>
+                <div id="filler-projects">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!" height="400" width="30%">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!" height="400" width="30%">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!" height="400" width="30%">
+                </div>
             </section>
         </section>
         <section id="contact-me">
@@ -41,12 +47,11 @@
                 <li><a href="tel:7859557333">Phone Number</a></li>
                 <li><a href="mailto:krohnayden@gmail.com">Email</a></li>
                 <li><a href="https://github.com/krohnayden">GitHub</a></li>
-                <li><a href="www.linkedin.com/in/krohnayden">Linkedin</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        
+        <p>Thanks for visiting!</p>
     </footer>
 </body>
 </html>
