added media screen and adjusted styling

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <a href=/Users/aydenkrohn/Bootcamp/Module-1-Challenge/index.html><img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Module-1-Screenshot.png" title="Click to visit website!" height="400" width="70%"></a>
                 </div>
                 <div id="filler-projects">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!" height="400" width="30%">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!" height="400" width="30%">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!" height="400" width="30%">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!">
+                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!">
                 </div>
             </section>
         </section>
