changed file path types

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AydenK Portfolio</title>
-    <link rel="stylesheet" href="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
                 <li><a href="#contact-me">Contact Me</a></li>
             </ul>
         </nav>
-        <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Mountain-Background.jpg" alt="#">
+        <img src="Images/Mountain-Background.jpg" alt="#">
     </header>
     <main>
         <section id="about-me">
@@ -26,7 +26,7 @@
                 apply my knowledge of coding to start my carrer in full-stack development.
                 This website contains my projects showcasing my skills in HTML, CSS, and JavaScript.
             </p>
-            <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/selflie-website.jpg" alt="picture of myself" height="150px" width="150px">
+            <img src="Images/selflie-website.jpg" alt="picture of myself" height="150px" width="150px">
         </section>
         <section id="work">
             <h2>Work</h2>
@@ -35,9 +35,9 @@
                     <a href=/Users/aydenkrohn/Bootcamp/Module-1-Challenge/index.html><img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Module-1-Screenshot.png" title="Click to visit website!" height="400" width="70%"></a>
                 </div>
                 <div id="filler-projects">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Code-Photo.jpg" title="Click to visit future website!">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Web-Design.jpg" title="Click to visit future website!">
-                    <img src="/Users/aydenkrohn/Bootcamp/aydenk-portfolio/Images/Dual-Screen.png" title="Click to visit future website!">
+                    <img src="Images/Code-Photo.jpg" title="Click to visit future website!">
+                    <img src="Images/Web-Design.jpg" title="Click to visit future website!">
+                    <img src="Images/Dual-Screen.png" title="Click to visit future website!">
                 </div>
             </section>
         </section>
